# pkg/api/talos/v2alpha1/talos.pb.gw.go
@@ -690,6 +690,27 @@ func local_request_ApiKeys_SelfRevokeIssuedApiKey_0(ctx context.Context, marshal
 	return msg, metadata, err
 }
 
+func request_ApiKeys_SelfGetActorBalance_0(ctx context.Context, marshaler runtime.Marshaler, client ApiKeysClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var (
+		protoReq SelfGetActorBalanceRequest
+		metadata runtime.ServerMetadata
+	)
+	if req.Body != nil {
+		_, _ = io.Copy(io.Discard, req.Body)
+	}
+	msg, err := client.SelfGetActorBalance(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	return msg, metadata, err
+}
+
+func local_request_ApiKeys_SelfGetActorBalance_0(ctx context.Context, marshaler runtime.Marshaler, server ApiKeysServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var (
+		protoReq SelfGetActorBalanceRequest
+		metadata runtime.ServerMetadata
+	)
+	msg, err := server.SelfGetActorBalance(ctx, &protoReq)
+	return msg, metadata, err
+}
+
 func request_ApiKeys_AdminDeriveToken_0(ctx context.Context, marshaler runtime.Marshaler, client ApiKeysClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
 	var (
 		protoReq DeriveTokenRequest
@@ -1258,6 +1279,26 @@ func RegisterApiKeysHandlerServer(ctx context.Context, mux *runtime.ServeMux, se
 		}
 		forward_ApiKeys_SelfRevokeIssuedApiKey_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 	})
+	mux.Handle(http.MethodGet, pattern_ApiKeys_SelfGetActorBalance_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		var stream runtime.ServerTransportStream
+		ctx = grpc.NewContextWithServerTransportStream(ctx, &stream)
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		annotatedContext, err := runtime.AnnotateIncomingContext(ctx, mux, req, "/talos.v2alpha1.ApiKeys/SelfGetActorBalance", runtime.WithHTTPPathPattern("/v2alpha1/self/actorBalance"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := local_request_ApiKeys_SelfGetActorBalance_0(annotatedContext, inboundMarshaler, server, req, pathParams)
+		md.HeaderMD, md.TrailerMD = metadata.Join(md.HeaderMD, stream.Header()), metadata.Join(md.TrailerMD, stream.Trailer())
+		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
+		if err != nil {
+			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		forward_ApiKeys_SelfGetActorBalance_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+	})
 	mux.Handle(http.MethodPost, pattern_ApiKeys_AdminDeriveToken_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
 		ctx, cancel := context.WithCancel(req.Context())
 		defer cancel()
@@ -1747,6 +1788,23 @@ func RegisterApiKeysHandlerClient(ctx context.Context, mux *runtime.ServeMux, cl
 		}
 		forward_ApiKeys_SelfRevokeIssuedApiKey_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 	})
+	mux.Handle(http.MethodGet, pattern_ApiKeys_SelfGetActorBalance_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		annotatedContext, err := runtime.AnnotateContext(ctx, mux, req, "/talos.v2alpha1.ApiKeys/SelfGetActorBalance", runtime.WithHTTPPathPattern("/v2alpha1/self/actorBalance"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := request_ApiKeys_SelfGetActorBalance_0(annotatedContext, inboundMarshaler, client, req, pathParams)
+		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
+		if err != nil {
+			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		forward_ApiKeys_SelfGetActorBalance_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+	})
 	mux.Handle(http.MethodPost, pattern_ApiKeys_AdminDeriveToken_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
 		ctx, cancel := context.WithCancel(req.Context())
 		defer cancel()
@@ -1904,6 +1962,7 @@ var (
 	pattern_ApiKeys_SelfIssueApiKey_0                 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2}, []string{"v2alpha1", "self", "issuedApiKeys"}, ""))
 	pattern_ApiKeys_SelfListIssuedApiKeys_0           = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2}, []string{"v2alpha1", "self", "issuedApiKeys"}, ""))
 	pattern_ApiKeys_SelfRevokeIssuedApiKey_0          = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 1, 0, 4, 1, 5, 3}, []string{"v2alpha1", "self", "issuedApiKeys", "key_id"}, "revoke"))
+	pattern_ApiKeys_SelfGetActorBalance_0             = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2}, []string{"v2alpha1", "self", "actorBalance"}, ""))
 	pattern_ApiKeys_AdminDeriveToken_0                = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2}, []string{"v2alpha1", "admin", "apiKeys"}, "derive"))
 	pattern_ApiKeys_GetJwks_0                         = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2}, []string{"v2alpha1", "derivedKeys", "jwks.json"}, ""))
 	pattern_ApiKeys_AdminVerifyApiKey_0               = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2}, []string{"v2alpha1", "admin", "apiKeys"}, "verify"))
@@ -1932,6 +1991,7 @@ var (
 	forward_ApiKeys_SelfIssueApiKey_0                 = runtime.ForwardResponseMessage
 	forward_ApiKeys_SelfListIssuedApiKeys_0           = runtime.ForwardResponseMessage
 	forward_ApiKeys_SelfRevokeIssuedApiKey_0          = runtime.ForwardResponseMessage
+	forward_ApiKeys_SelfGetActorBalance_0             = runtime.ForwardResponseMessage
 	forward_ApiKeys_AdminDeriveToken_0                = runtime.ForwardResponseMessage
 	forward_ApiKeys_GetJwks_0                         = runtime.ForwardResponseMessage
 	forward_ApiKeys_AdminVerifyApiKey_0               = runtime.ForwardResponseMessage
